[1.3] - Improvements